--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server",
+    "dev": "nodemon server"
   },
   "author": "",
   "license": "ISC",
@@ -19,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/zdensamson/Note_taker/issues"
   },
-  "homepage": "https://github.com/zdensamson/Note_taker#readme"
+  "homepage": "https://github.com/zdensamson/Note_taker#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.12"
+  }
 }
